--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ AZURE_OPENAI_ENDPOINT="https://..."
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME="..."
 AZURE_OPENAI_API_VERSION="..."
 PROJECT_CONNECTION_STRING="..."
-GITHUB_TOKEN="..."
+GITHUB_TOKEN="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"
 AZURE_SEARCH_SERVICE_ENDPOINT = "https://..."
 AZURE_SEARCH_API_KEY = "..."
